--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ AZURE_OPENAI_ENDPOINT="https://..."
 AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME="..."
 AZURE_OPENAI_API_VERSION="..."
 PROJECT_CONNECTION_STRING="..."
-GITHUB_TOKEN="..."
+GITHUB_TOKEN="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"
 AZURE_SEARCH_SERVICE_ENDPOINT = "https://..."
 AZURE_SEARCH_API_KEY = "..."
